Fix emojis being cropped at the top

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -810,6 +810,7 @@ body > [data-popper-placement] {
     img.emojione {
       width: 48px;
       height: 48px;
+      margin: 0;
     }
   }
 }
